# Copyright (c) 2019 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//adrbrowsiel/browser/adrbrowsiel_ads/android/java_sources.gni")
import("//adrbrowsiel/components/adrbrowsiel_ads/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_referrals/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_rewards/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_sync/buildflags/buildflags.gni")
import("//adrbrowsiel/components/permissions/android/java_sources.gni")
import("//adrbrowsiel/components/safetynet/java_sources.gni")
import("//components/feed/features.gni")

adrbrowsiel_java_sources = [
  "../../adrbrowsiel/android/feed/core/java/src/org/chromium/chrome/browser/feed/adrbrowsielFeedSurfaceCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielAppHooks.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielBadge.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielFeatureList.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielHelper.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielIntentHandler.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielLaunchIntentDispatcher.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRelaunchUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsBalance.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsDonationSentActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsExternalWallet.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsHelper.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsNativeWorker.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsObserver.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsOnboardingPagerAdapter.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsPanelPopup.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsPublisher.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsSiteBannerActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsUserWalletActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielRewardsVerifyWalletActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielSyncReflectionUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielUphold.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/CrossPromotionalModalDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/InternetConnection.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/QRCodeShareDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/SetDefaultBrowserActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/app/adrbrowsielActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/app/appmenu/adrbrowsielAppMenuPropertiesDelegateImpl.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/appmenu/adrbrowsielTabbedAppMenuPropertiesDelegate.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/bookmarks/adrbrowsielBookmarkUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsiel_stats/adrbrowsielStatsBottomSheetDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsiel_stats/adrbrowsielStatsUtil.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/custom_layout/HeightWrappingViewPager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/custom_layout/NonSwipeableViewPager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/custom_layout/VerticalViewPager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/ArrowColorDrawable.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltip.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltipUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupENSResolveMethodPreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupUnstoppableDomainsResolveMethodPreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/document/adrbrowsielLauncherActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/download/adrbrowsielMimeUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/download/settings/adrbrowsielDownloadSettings.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/externalnav/adrbrowsielExternalNavigationHandler.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/feedback/adrbrowsielHelpAndFeedbackLauncherImpl.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/help/adrbrowsielHelpAndFeedbackLauncher.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/homepage/adrbrowsielHomepageManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/homepage/settings/adrbrowsielHomepageSettings.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/informers/adrbrowsielAndroidSyncDisabledInformer.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/language/settings/adrbrowsielLanguageSettings.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/local_database/adrbrowsielStatsTable.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/local_database/DatabaseHelper.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/local_database/SavedBandwidthTable.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/local_database/TopSiteTable.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/night_mode/settings/adrbrowsielRadioButtonGroupThemePreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/night_mode/settings/adrbrowsielThemePreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/adrbrowsielNotificationManagerProxyImpl.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/adrbrowsielNotificationPlatformBridge.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/adrbrowsielNotificationSettingsBridge.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/adrbrowsielOnboardingNotification.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/adrbrowsielSetDefaultBrowserNotificationService.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/channels/adrbrowsielChannelDefinitions.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotification.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationPublisher.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationUtil.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/adrbrowsielDuckDuckGoOfferView.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/adrbrowsielNewTabPage.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/adrbrowsielNewTabPageLayout.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/IncognitoNewTabPageView.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetAdapter.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetItem.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackAdapter.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp/widget/SwipeAndDragHelper.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/NTPBackgroundImagesBridge.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/RewardsBottomSheetDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/model/BackgroundImage.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/model/ImageCredit.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/model/NTPImage.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredLogo.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredTab.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/model/TopSite.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/model/Wallpaper.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/util/FetchWallpaperWorkerTask.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/util/NTPUtil.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/util/NewTabPageListener.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ntp_background_images/util/SponsoredImageUtil.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/omnibox/suggestions/editurl/adrbrowsielEditUrlSuggestionProcessor.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/adrbrowsielRewardsOnboardingFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/OnViewPagerAction.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/OnboardingActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/OnboardingPrefManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/OnboardingViewPagerAdapter.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/P3aOnboardingActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/SearchActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/SearchEngineEnum.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/SearchEngineOnboardingFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/TroubleshootingOnboardingFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightItem.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightView.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2Fragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2PagerAdapter.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/partnercustomizations/adrbrowsielPartnerBrowserCustomizations.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/partnercustomizations/CloseadrbrowsielManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/password_manager/settings/adrbrowsielPasswordSettingsBase.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/preferences/adrbrowsielPrefServiceBridge.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/preferences/adrbrowsielPreferenceKeys.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/preferences/website/adrbrowsielShieldsContentSettings.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/preferences/website/adrbrowsielShieldsContentSettingsObserver.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/privacy/settings/adrbrowsielPrivacySettings.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/qrreader/BarcodeTracker.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/qrreader/BarcodeTrackerFactory.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/qrreader/CameraSource.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/qrreader/CameraSourcePreview.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/query_tiles/adrbrowsielQueryTileSection.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/rate/RateDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/rate/RateFeedbackUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/rate/RateUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/safe_browsing/settings/adrbrowsielStandardProtectionSettingsFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/AppearancePreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/BackgroundImagesPreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielCustomTabsPreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielDialogPreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielLicensePreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielLicensePreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielMainPreferencesBase.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielPreferenceDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielPreferenceFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielRewardsPreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielRewardsResetPreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielRewardsResetPreferenceDialog.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielSearchEngineUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielSearchEnginesPreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielSettingsActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielSettingsLauncherImpl.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielStatsPreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielWebrtcPolicyPreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielWebrtcPolicyPreferencesFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/SearchEngineTabModelSelectorObserver.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/developer/adrbrowsielQAPreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/developer/adrbrowsielRewardsDebugPreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/themes/adrbrowsielRadioButtonGroupCustomHomepageThemePreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/shields/adrbrowsielShieldsHandler.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/shields/adrbrowsielShieldsMenuObserver.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/shields/adrbrowsielShieldsUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/shields/ShieldsTooltipEnum.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/signin/adrbrowsielSigninManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/site_settings/adrbrowsielSiteSettingsDelegate.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/site_settings/DesktopModePreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/site_settings/PlayYTVideoInBrowserPreferences.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/suggestions/tile/adrbrowsielTileView.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/sync/adrbrowsielAndroidSyncSettings.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/sync/settings/adrbrowsielManageSyncSettings.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/tabmodel/adrbrowsielTabCreator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/adrbrowsielHomeButton.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/adrbrowsielIncognitoToggleTabLayout.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/adrbrowsielToolbarManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BookmarksButton.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomTabSwitcherActionMenuCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarConfiguration.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarNewTabButton.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarVariationManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/adrbrowsielBottomControlsCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/adrbrowsielScrollingBottomViewResourceFrameLayout.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarLinearLayout.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarMediator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarModel.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarViewBinder.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/SearchAccelerator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/ShareButton.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarMediator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarModel.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarViewBinder.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/menu_button/adrbrowsielMenuButtonCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/top/adrbrowsielTabSwitcherModeTTCoordinatorPhone.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/top/adrbrowsielTabSwitcherModeTTPhone.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/top/adrbrowsielToolbarLayout.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/toolbar/top/adrbrowsielTopToolbarCoordinator.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ui/adrbrowsiel_tricks/checkbox_to_switch/CheckBoxPreference.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/ui/messages/infobar/adrbrowsielSimpleConfirmInfoBarBuilder.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/upgrade/adrbrowsielPackageReplacedBroadcastReceiver.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/upgrade/adrbrowsielUpgradeJobIntentServiceImpl.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/upgrade/NotificationIntent.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/util/adrbrowsielDbUtil.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/util/adrbrowsielReferrer.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/util/ConfigurationUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/util/ImageUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/util/PackageUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/util/TabUtils.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceAccountBalance.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceActivity.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceBuyFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceCoinNetworks.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvert.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvertFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceDepositFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceNativeWorker.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceObserver.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSpinnerAdapter.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSummaryFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceWidgetManager.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/CoinNetworkModel.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/ConvertAsset.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetBottomSheetDialogFragment.java",
  "../../adrbrowsiel/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetTabAdapter.java",
]

if (adrbrowsiel_rewards_enabled || enable_adrbrowsiel_referrals) {
  adrbrowsiel_java_sources += adrbrowsiel_rewards_java_sources
}

if (adrbrowsiel_ads_enabled) {
  adrbrowsiel_java_sources += adrbrowsiel_ads_java_sources
}

if (enable_adrbrowsiel_sync) {
  adrbrowsiel_java_sources += [
    "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielSyncInformers.java",
    "../../adrbrowsiel/android/java/org/chromium/chrome/browser/adrbrowsielSyncWorker.java",
    "../../adrbrowsiel/android/java/org/chromium/chrome/browser/settings/adrbrowsielSyncScreensPreference.java",
    "../../adrbrowsiel/android/java/org/chromium/chrome/browser/sync/adrbrowsielSyncDevices.java",
  ]
}

adrbrowsiel_components_browser_ui_site_settings_android_java = [
  "//adrbrowsiel/components/browser_ui/site_settings/android/java/src/org/chromium/components/browser_ui/site_settings/adrbrowsielSingleCategorySettings.java",
  "//adrbrowsiel/components/browser_ui/site_settings/android/java/src/org/chromium/components/browser_ui/site_settings/adrbrowsielSiteSettingsPreferencesBase.java",
]

adrbrowsiel_browser_ui_android_appmenu_internal_sources = [ "//adrbrowsiel/browser/ui/android/appmenu/internal/java/src/org/chromium/chrome/browser/ui/appmenu/adrbrowsielAppMenu.java" ]

adrbrowsiel_browser_ui_android_toolbar_sources = [ "//adrbrowsiel/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/bottom/adrbrowsielBottomControlsMediator.java" ]

adrbrowsiel_java_base_sources = [
  "//adrbrowsiel/android/java/org/chromium/base/adrbrowsielCommandLineInitUtil.java",
  "//adrbrowsiel/android/java/org/chromium/base/adrbrowsielReflectionUtil.java",
]

adrbrowsiel_java_base_module_sources = [
  "//adrbrowsiel/android/java/org/chromium/chrome/browser/base/SplitCompatJobIntentService.java",
  "//adrbrowsiel/android/java/org/chromium/chrome/browser/upgrade/adrbrowsielUpgradeJobIntentService.java",
]

adrbrowsiel_java_base_module_deps =
    [ "//third_party/androidx:androidx_core_core_java" ]

adrbrowsiel_android_features_tab_ui_java_sources = [ "//adrbrowsiel/android/features/tab_ui/java/src/org/chromium/chrome/browser/tasks/tab_management/adrbrowsielTabGroupUiCoordinator.java" ]
