# Copyright (c) 2020 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//adrbrowsiel/browser/autocomplete/sources.gni")
import("//adrbrowsiel/browser/binance/sources.gni")
import("//adrbrowsiel/browser/adrbrowsiel_rewards/sources.gni")
import("//adrbrowsiel/browser/adrbrowsiel_shields/sources.gni")
import("//adrbrowsiel/browser/adrbrowsiel_wallet/sources.gni")
import("//adrbrowsiel/browser/component_updater/sources.gni")
import("//adrbrowsiel/browser/crypto_dot_com/sources.gni")
import("//adrbrowsiel/browser/decentralized_dns/sources.gni")
import("//adrbrowsiel/browser/download/sources.gni")
import("//adrbrowsiel/browser/gemini/sources.gni")
import("//adrbrowsiel/browser/greaselion/sources.gni")
import("//adrbrowsiel/browser/importer/sources.gni")
import("//adrbrowsiel/browser/ipfs/sources.gni")
import("//adrbrowsiel/browser/new_tab/sources.gni")
import("//adrbrowsiel/browser/permissions/sources.gni")
import("//adrbrowsiel/browser/search_engines/sources.gni")
import("//adrbrowsiel/browser/speedreader/sources.gni")
import("//adrbrowsiel/browser/themes/sources.gni")
import("//adrbrowsiel/chromium_src/chrome/browser/prefs/sources.gni")
import("//adrbrowsiel/components/adrbrowsiel_ads/browser/buildflags/buildflags.gni")
import(
    "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_referrals/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_rewards/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_sync/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_together/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_wayback_machine/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_webtorrent/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/ftx/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/sidebar/buildflags/buildflags.gni")
import("//adrbrowsiel/components/tor/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

adrbrowsiel_chrome_browser_visibility = [
  "//adrbrowsiel/browser/*",
  "//adrbrowsiel/test:*",

  # these are layering violation and need to be fixed
  "//adrbrowsiel/components/adrbrowsiel_ads/test:*",
  "//adrbrowsiel/components/ipfs/test:*",

  # Chrome does not yet define a visibility list by itself, meaning we can't
  # append our list to them and that what we have here will become law not just
  # for adrbrowsiel, but also for the rest of chrome. Thus, we need to provide our own
  # permissive list for chrome here too, to be removed in the future if Chrome
  # ever provides it's own list (at which point we'll append instead of set).
  "//chrome:browser_dependencies",
  "//chrome/app/*",
  "//chrome/test/*",
  "//extensions/*",
]

adrbrowsiel_chrome_browser_sources = [
  "//adrbrowsiel/browser/adrbrowsiel_browser_main_extra_parts.cc",
  "//adrbrowsiel/browser/adrbrowsiel_browser_main_extra_parts.h",
  "//adrbrowsiel/browser/adrbrowsiel_browser_main_parts.cc",
  "//adrbrowsiel/browser/adrbrowsiel_browser_main_parts.h",
  "//adrbrowsiel/browser/adrbrowsiel_browser_process.h",
  "//adrbrowsiel/browser/adrbrowsiel_browser_process_impl.cc",
  "//adrbrowsiel/browser/adrbrowsiel_browser_process_impl.h",
  "//adrbrowsiel/browser/adrbrowsiel_content_browser_client.cc",
  "//adrbrowsiel/browser/adrbrowsiel_content_browser_client.h",
  "//adrbrowsiel/browser/adrbrowsiel_local_state_prefs.cc",
  "//adrbrowsiel/browser/adrbrowsiel_local_state_prefs.h",
  "//adrbrowsiel/browser/adrbrowsiel_profile_prefs.cc",
  "//adrbrowsiel/browser/adrbrowsiel_profile_prefs.h",
  "//adrbrowsiel/browser/adrbrowsiel_tab_helpers.cc",
  "//adrbrowsiel/browser/adrbrowsiel_tab_helpers.h",
  "//adrbrowsiel/browser/browser_context_keyed_service_factories.cc",
  "//adrbrowsiel/browser/browser_context_keyed_service_factories.h",
  "//adrbrowsiel/browser/geolocation/adrbrowsiel_geolocation_permission_context_delegate.cc",
  "//adrbrowsiel/browser/geolocation/adrbrowsiel_geolocation_permission_context_delegate.h",
  "//adrbrowsiel/browser/metrics/metrics_reporting_util.cc",
  "//adrbrowsiel/browser/metrics/metrics_reporting_util.h",
  "//adrbrowsiel/browser/update_util.cc",
  "//adrbrowsiel/browser/update_util.h",
]

adrbrowsiel_chrome_browser_deps = [
  "//base",
  "//adrbrowsiel/app:adrbrowsiel_generated_resources_grit",
  "//adrbrowsiel/browser:browser_process",
  "//adrbrowsiel/browser/adrbrowsiel_ads",
  "//adrbrowsiel/browser/adrbrowsiel_ads/notifications",
  "//adrbrowsiel/browser/adrbrowsiel_stats:stats_updater",
  "//adrbrowsiel/browser/browsing_data",
  "//adrbrowsiel/browser/content_settings",
  "//adrbrowsiel/browser/ephemeral_storage",
  "//adrbrowsiel/browser/gcm_driver",
  "//adrbrowsiel/browser/net",
  "//adrbrowsiel/browser/ntp_background_images",
  "//adrbrowsiel/browser/profiles",
  "//adrbrowsiel/browser/renderer_context_menu",
  "//adrbrowsiel/browser/search",
  "//adrbrowsiel/browser/sync",
  "//adrbrowsiel/browser/themes",
  "//adrbrowsiel/browser/translate/buildflags",
  "//adrbrowsiel/browser/ui",
  "//adrbrowsiel/common",
  "//adrbrowsiel/common:pref_names",
  "//adrbrowsiel/common:switches",
  "//adrbrowsiel/components/binance/browser/buildflags",
  "//adrbrowsiel/components/adrbrowsiel_ads/browser/buildflags",
  "//adrbrowsiel/components/adrbrowsiel_referrals/buildflags",
  "//adrbrowsiel/components/adrbrowsiel_rewards/browser/buildflags",
  "//adrbrowsiel/components/adrbrowsiel_search/browser",
  "//adrbrowsiel/components/adrbrowsiel_search/common:mojom",
  "//adrbrowsiel/components/adrbrowsiel_shields/common",
  "//adrbrowsiel/components/adrbrowsiel_sync/buildflags:buildflags",
  "//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags",
  "//adrbrowsiel/components/adrbrowsiel_wayback_machine:buildflags",
  "//adrbrowsiel/components/adrbrowsiel_webtorrent/browser/buildflags",
  "//adrbrowsiel/components/cosmetic_filters/browser",
  "//adrbrowsiel/components/cosmetic_filters/common:mojom",
  "//adrbrowsiel/components/crypto_dot_com/browser/buildflags",
  "//adrbrowsiel/components/decentralized_dns/buildflags",
  "//adrbrowsiel/components/gemini/browser/buildflags",
  "//adrbrowsiel/components/greaselion/browser/buildflags",
  "//adrbrowsiel/components/ipfs/buildflags",
  "//adrbrowsiel/components/l10n/browser",
  "//adrbrowsiel/components/l10n/common",
  "//adrbrowsiel/components/ntp_background_images/browser",
  "//adrbrowsiel/components/ntp_tiles",
  "//adrbrowsiel/components/p3a",
  "//adrbrowsiel/components/p3a:buildflags",
  "//adrbrowsiel/components/resources",
  "//adrbrowsiel/components/sidebar/buildflags",
  "//adrbrowsiel/components/speedreader:buildflags",
  "//adrbrowsiel/components/tor/buildflags",
  "//adrbrowsiel/components/version_info",
  "//adrbrowsiel/services/network/public/cpp",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profile",
  "//chrome/browser/ui",
  "//chrome/common",
  "//components/account_id",
  "//components/autofill/core/common",
  "//components/browsing_data/core",
  "//components/content_settings/browser",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/embedder_support",
  "//components/feed/core/shared_prefs:feed_shared_prefs",
  "//components/gcm_driver:gcm_buildflags",
  "//components/metrics",
  "//components/ntp_tiles",
  "//components/password_manager/core/common",
  "//components/permissions",
  "//components/pref_registry",
  "//components/prefs",
  "//components/safe_browsing/core/common:safe_browsing_prefs",
  "//components/search_engines",
  "//components/services/heap_profiling/public/mojom",
  "//components/signin/public/base",
  "//components/sync/base",
  "//components/sync/driver",
  "//components/translate/core/browser:translate_pref_names",
  "//components/version_info",
  "//components/version_info:channel",
  "//content/public/browser",
  "//content/public/common",
  "//extensions/buildflags",
  "//mojo/public/cpp/bindings",
  "//net",
  "//services/metrics/public/cpp:metrics_cpp",
  "//services/network/public/cpp",
  "//third_party/blink/public/mojom:mojom_platform_headers",
  "//third_party/widevine/cdm:buildflags",
  "//ui/base",
  "//url",
]

if (is_mac) {
  adrbrowsiel_chrome_browser_sources += [
    "//adrbrowsiel/browser/adrbrowsiel_browser_main_parts_mac.h",
    "//adrbrowsiel/browser/adrbrowsiel_browser_main_parts_mac.mm",
  ]
}

if (enable_sparkle) {
  adrbrowsiel_chrome_browser_sources += [
    "//adrbrowsiel/browser/mac/sparkle_glue.h",
    "//adrbrowsiel/browser/mac/sparkle_glue.mm",
    "//adrbrowsiel/browser/mac/su_updater.h",
  ]
}

if (adrbrowsiel_wallet_enabled) {
  adrbrowsiel_chrome_browser_deps += [
    "//adrbrowsiel/browser/adrbrowsiel_wallet",
    "//adrbrowsiel/components/adrbrowsiel_wallet/browser",
    "//adrbrowsiel/components/adrbrowsiel_wallet/common",
    "//adrbrowsiel/components/adrbrowsiel_wallet/common:mojom",
    "//adrbrowsiel/components/adrbrowsiel_wallet_ui:mojo_bindings",
  ]
}

if (enable_adrbrowsiel_sync) {
  adrbrowsiel_chrome_browser_deps += [
    "//adrbrowsiel/components/adrbrowsiel_sync",
    "//adrbrowsiel/components/adrbrowsiel_sync:features",
    "//adrbrowsiel/components/adrbrowsiel_sync:network_time_helper",
    "//adrbrowsiel/components/adrbrowsiel_sync:prefs",
  ]
}

if (!is_android) {
  adrbrowsiel_chrome_browser_sources += [
    "//adrbrowsiel/browser/p3a/p3a_core_metrics.cc",
    "//adrbrowsiel/browser/p3a/p3a_core_metrics.h",
  ]

  adrbrowsiel_chrome_browser_deps += [
    "//adrbrowsiel/app:adrbrowsiel_generated_resources_grit",
    "//adrbrowsiel/browser/importer",
    "//adrbrowsiel/browser/infobars",
    "//adrbrowsiel/browser/ui/bookmark",
    "//adrbrowsiel/components/weekly_storage",
  ]
} else {
  adrbrowsiel_chrome_browser_deps +=
      [ "//adrbrowsiel/browser/android:android_browser_process" ]
}

if (enable_sidebar) {
  adrbrowsiel_chrome_browser_deps += [ "//adrbrowsiel/components/sidebar" ]
}

if (adrbrowsiel_together_enabled) {
  adrbrowsiel_chrome_browser_deps += [ "//adrbrowsiel/components/adrbrowsiel_together/browser" ]
}

if (enable_tor) {
  adrbrowsiel_chrome_browser_deps += [
    "//adrbrowsiel/browser/tor",
    "//adrbrowsiel/components/tor",
    "//adrbrowsiel/components/tor:pref_names",
    "//adrbrowsiel/components/tor:utils",
  ]
}

if (enable_extensions) {
  adrbrowsiel_chrome_browser_deps += [
    "//adrbrowsiel/browser/extensions",
    "//chrome/browser/extensions",
    "//extensions/browser",
    "//extensions/common:common_constants",
  ]

  if (enable_adrbrowsiel_webtorrent) {
    adrbrowsiel_chrome_browser_deps +=
        [ "//adrbrowsiel/components/adrbrowsiel_webtorrent/browser" ]
  }
}

if (enable_adrbrowsiel_referrals) {
  adrbrowsiel_chrome_browser_deps += [ "//adrbrowsiel/components/adrbrowsiel_referrals/browser" ]
}

if (adrbrowsiel_ads_enabled) {
  adrbrowsiel_chrome_browser_deps += [
    "//adrbrowsiel/components/adrbrowsiel_ads/browser",
    "//components/dom_distiller/core",
  ]
}

if (enable_adrbrowsiel_wayback_machine) {
  adrbrowsiel_chrome_browser_deps += [ "//adrbrowsiel/components/adrbrowsiel_wayback_machine" ]
}

if (enable_widevine) {
  adrbrowsiel_chrome_browser_sources += [
    "//adrbrowsiel/browser/adrbrowsiel_drm_tab_helper.cc",
    "//adrbrowsiel/browser/adrbrowsiel_drm_tab_helper.h",
  ]
  adrbrowsiel_chrome_browser_deps += [
    "//adrbrowsiel/browser/widevine",
    "//adrbrowsiel/components/adrbrowsiel_drm",
  ]
}

if (enable_adrbrowsiel_perf_predictor) {
  adrbrowsiel_chrome_browser_deps +=
      [ "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser" ]
}

if (enable_ftx) {
  adrbrowsiel_chrome_browser_deps += [ "//adrbrowsiel/browser/ftx" ]
}

if (is_win && is_official_build) {
  adrbrowsiel_chrome_browser_sources += [
    "//chrome/browser/google/google_update_win.cc",
    "//chrome/browser/google/google_update_win.h",
    "//chrome/browser/google/switches.cc",
    "//chrome/browser/google/switches.h",
  ]

  adrbrowsiel_chrome_browser_deps += [ "//google_update" ]
}

adrbrowsiel_chrome_browser_public_deps = [
  "//adrbrowsiel/components/adrbrowsiel_sync:constants",
  "//adrbrowsiel/components/variations:constants",
]

adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_autocomplete_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_binance_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_adrbrowsiel_rewards_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_adrbrowsiel_shields_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_component_updater_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_crypto_dot_com_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_decentralized_dns_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_download_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_gemini_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_greaselion_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_importer_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_ipfs_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_new_tab_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_permissions_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_search_engines_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_speedreader_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_themes_sources
adrbrowsiel_chrome_browser_sources += adrbrowsiel_browser_wallet_sources

adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_autocomplete_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_binance_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_adrbrowsiel_rewards_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_adrbrowsiel_shields_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_component_updater_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_crypto_dot_com_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_decentralized_dns_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_download_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_gemini_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_greaselion_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_importer_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_ipfs_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_new_tab_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_permissions_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_search_engines_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_speedreader_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_themes_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_browser_wallet_deps
adrbrowsiel_chrome_browser_deps += adrbrowsiel_chromium_src_chrome_browser_prefs_deps
